# Raytracer

./: .gitignore  CMakeLists.txt  README.md
src/: aabb.h  aggregate.h  bvh.h  camera.h  hitinfo.h  main.cpp  mcp.h  memory.h  ray.h  shape.h  sphere.h  threadpool.h  threadqueue.h  triangle.h  util.h  vector.h
